--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,37 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>final-homework-gui-sql</groupId>
-  <artifactId>final-homework-gui-sql</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <!-- <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>15</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build> 
-  -->
-  <dependencies>
-  
-  <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-	<dependency>
-    <groupId>org.mariadb.jdbc</groupId>
-  	  <artifactId>mariadb-java-client</artifactId>
-  	  <version>2.7.3</version>
-	</dependency>
-  
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>final-homework-gui-sql</groupId>
+    <artifactId>final-homework-gui-sql</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <!-- <build>
+      <sourceDirectory>src</sourceDirectory>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <release>15</release>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
+    -->
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>
+            11
+        </maven.compiler.target>
+    </properties>
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
+    </dependencies>
 </project>
